--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -33,17 +33,17 @@
 
     <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
         <button onclick="sidebar_close()" class="w-full text-center py-4">
-            <i class="fa-solid fa-xmark fa-spin fa-spin-reverse p-3 rounded-full bg-gray-100 hover:bg-gray-200 text-black"></i>
+            <i class="fa-solid fa-xmark p-3 rounded-full bg-gray-100 hover:bg-gray-200 text-black"></i>
         </button>
         <ul class="list-unstyled font-medium">
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer bg-gray-100" style="border-radius: 50px 0 0 50px;"><a href="/Admin/Index">Dashboard</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/products/Index">Product</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Index">Order</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Waiting">Waiting</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Request_Cancel">Request Cancel</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/ranks/Index">Ranks</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/promocodes/Index">Prmocodes</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/User/Logout">Logout</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer bg-gray-100" style="border-radius: 50px 0 0 50px;"><a href="/Admin/Index" class="text-black">Dashboard</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/products/Index" class="text-black">Product</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Index" class="text-black">Order</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Waiting" class="text-black">Waiting</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Request_Cancel" class="text-black">Request Cancel</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/ranks/Index" class="text-black">Ranks</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/promocodes/Index" class="text-black">Prmocodes</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/User/Logout" class="text-black">Logout</a></li>
         </ul>
     </div>
 
