--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,10 +40,9 @@
                     }
                     else if (Session["email"] == null)
                     {
-                        <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
+                        <a class="lg:inline-block py-[10px] rounded-xl transition duration-100 mr-2"
                            href="@Url.Action("SignIn", "User")">
                             <i class="fa-solid fa-user text-black"></i>
-                            SignIn
                         </a>
 
                         @*Cart*@
