--- a/Views/User/Details_Info.cshtml
+++ b/Views/User/Details_Info.cshtml
@@ -11,8 +11,8 @@
                 <ul class="space-y-2">
                     <li>
                         <div href="#" class="items-center p-2 text-base font-normal text-gray-900 rounded-lg">
-                            <img class="relative h-75 w-75 ms-2 mb-3 rounded-lg" src="https://i.pinimg.com/564x/64/cf/6f/64cf6f2685b6939f1a9418289c3dd647.jpg" />
-                            <div class="ml-3">Name</div>
+                            <img class="relative h-75 w-75 ms-2 mb-3 rounded-lg" src="~/wwwroot/Images/Avatars/@Html.DisplayFor(item=>item.avatar)" />
+                            <div class="ml-3">@Html.DisplayFor(item => item.names)</div>
                         </div>
                     </li>
                     <li class="mt-5">
