--- a/Views/User/Edit_Info.cshtml
+++ b/Views/User/Edit_Info.cshtml
@@ -91,7 +91,7 @@
                     </div>
                     <div class="text-start">
                         <div class="text-lg font-bold my-2">
-                            Avatart
+                            Avatar
                             <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
                         </div>
                         <p>
